--- a/index.html
+++ b/index.html
@@ -101,15 +101,18 @@
             <div class="modal-body modal-create">
                 <form id="formCreate">
                     <div class="mb-3">
-                        <label for="nameCate" class="label-title">Name Category : </label>
+                        <label for="nameCate" class="label-title">Name Category : </label> 
+                        <span class="error-message" id="nameCate-error"></span>
                         <input type="text" class="form-control" id="nameCate" placeholder="name category">
                     </div>
                     <div class="mb-3">
                         <label for="slug" class="label-title">Slug : </label>
+                        <span class="error-message" id="slug-error"></span>
                         <input type="text" class="form-control" id="slug" placeholder="name-category">
                     </div>
                     <div class="mb-3">
                         <label for="description" class="label-title">Description : </label>
+                        <span class="error-message" id="description-error"></span>
                         <input type="text" class="form-control" id="description" placeholder="description category">
                     </div>
                 
